HUE-6423 [editor] Fix the snippet database dropdown and jumpiness
(cherry picked from commit 5396d10d2f9e4839c3ff476a33ad199f922db29a)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -825,21 +825,6 @@ body {
   border: none;
 }
 
-.hue-drop-down-input {
-  width: 175px !important;
-  height: 12px !important;
-  font-size: 12px !important;
-  border: 1px solid rgba(0,0,0,0.2) !important;
-  border-radius: 2px !important;
-  box-shadow: none !important;
-  margin-left: -1px;
-}
-
-.hue-drop-down-active span {
-  font-size: 12px;
-  font-weight: lighter;
-}
-
 .hue-context-menu {
   display: none;
   position: fixed;
